--- a/index.html
+++ b/index.html
@@ -1,112 +1,181 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="css/style.css">
-  <title>Frontend Mentor | Crowdfunding product page</title>
-</head>
-<body>
-  About
-  Discover
-  Get Started
-
-  Mastercraft Bamboo Monitor Riser
-  A beautiful & handcrafted monitor stand to reduce neck and eye strain.
-
-  Back this project
-  Bookmark
-
-  $89,914 of $100,000 backed
-  5,007 total backers
-  56 days left
-
-  About this project
-
-  The Mastercraft Bamboo Monitor Riser is a sturdy and stylish platform that elevates your screen 
-  to a more comfortable viewing height. Placing your monitor at eye level has the potential to improve 
-  your posture and make you more comfortable while at work, helping you stay focused on the task at hand.
-
-  Featuring artisan craftsmanship, the simplicity of design creates extra desk space below your computer 
-  to allow notepads, pens, and USB sticks to be stored under the stand.
-  
-  Bamboo Stand
-  Pledge $25 or more
-  You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and 
-  you’ll be added to a special Backer member list.
-  101 left
-  Select Reward
-
-  Black Edition Stand
-  Pledge $75 or more
-  You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer 
-  member list. Shipping is included.
-  64 left
-  Select Reward
-
-  Mahogany Special Edition
-  Pledge $200 or more
-  You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added 
-  to our Backer member list. Shipping is included.
-  0 left
-  Out of Stock
-
-  <!-- Selection modal start -->
-
-  Back this project
-  Want to support us in bringing Mastercraft Bamboo Monitor Riser out in the world?
-
-  Pledge with no reward
-  Choose to support us without a reward if you simply believe in our project. As a backer, 
-  you will be signed up to receive product updates via email.
-
-  Bamboo Stand
-  Pledge $25 or more
-  You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and
-  you’ll be added to a special Backer member list.
-  101 left
-
-  <!-- Selected pledge start -->
-  Enter your pledge
-  $25
-  Continue
-  <!-- Selected pledge end -->
-
-  Black Edition Stand
-  Pledge $75 or more
-  You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer
-  member list. Shipping is included.
-  64 left
-
-  <!-- Selected pledge start -->
-  Enter your pledge
-  $75
-  Continue
-  <!-- Selected pledge end -->
-
-  Mahogany Special Edition
-  Pledge $200 or more
-  You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added
-  to our Backer member list. Shipping is included.
-  0 left
-
-  <!-- Selected pledge  start -->
-  Enter your pledge
-  $200
-  Continue
-  <!-- Selected pledge end -->
-
-  <!-- Selection modal end -->
-
-  <!-- Success modal start -->
-
-  Thanks for your support!
-  Your pledge brings us one step closer to sharing Mastercraft Bamboo Monitor Riser worldwide. You will get
-  an email once our campaign is completed.
-  Got it!
-
-  <!-- Success modal end -->
-  <script src="js/main.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
+    <link rel="stylesheet" href="css/style.css" />
+    <title>Frontend Mentor | Crowdfunding product page</title>
+  </head>
+  <body>
+    <header>
+      <div>
+        <img src="images/logo.svg" alt="Crowdfund" />
+      </div>
+      <nav>
+        <ul>
+          <li><a href="">About</a></li>
+          <li><a href="">Discover</a></li>
+          <li><a href="">Get started</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <div>
+        <div>
+          <img src="images/logo-mastercraft.svg" alt="" />
+        </div>
+        <h1>Mastercraft Bamboo Monitor Riser</h1>
+        <p>A beautiful & handcrafted monitor stand to reduce neck and eye strain.</p>
+        <div>
+          <button>Back this project</button>
+          <button><img src="images/icon-bookmark.svg" alt="" />Bookmark</button>
+        </div>
+      </div>
+      <div>
+        <p><span>$89,914</span> of $100,000 backed</p>
+        <p><span>5,007</span> total backers</p>
+        <p><span>56</span> days left</p>
+      </div>
+      <div>
+        <h2>About this project</h2>
+        <p>
+          The Mastercraft Bamboo Monitor Riser is a sturdy and stylish platform that elevates your screen to a more comfortable viewing height.
+          Placing your monitor at eye level has the potential to improve your posture and make you more comfortable while at work, helping you stay
+          focused on the task at hand.
+        </p>
+        <p>
+          Featuring artisan craftsmanship, the simplicity of design creates extra desk space below your computer to allow notepads, pens, and USB
+          sticks to be stored under the stand.
+        </p>
+        <div>
+          <h3>Bamboo Stand</h3>
+          <p>Pledge $25 or more</p>
+          <p>
+            You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and you’ll be added to a special
+            Backer member list.
+          </p>
+          <p><span>101</span> left</p>
+          <button>Select Reward</button>
+        </div>
+        <div>
+          <h3>Black Edition Stand</h3>
+          <p>Pledge $75 or more</p>
+          <p>
+            You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer member list. Shipping is included.
+          </p>
+          <p><span>64</span> left</p>
+          <button>Select Reward</button>
+        </div>
+        <div>
+          <h3>Mahogany Special Edition</h3>
+          <p>Pledge $200 or more</p>
+          <p>
+            You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added to our Backer member list.
+            Shipping is included.
+          </p>
+          <p><span>0</span> left</p>
+          <button>Out of Stock</button>
+        </div>
+      </div>
+      <!-- Selection modal start -->
+      <div>
+        <h2>Back this project</h2>
+        <p>Want to support us in bringing Mastercraft Bamboo Monitor Riser out in the world?</p>
+        <fieldset>
+          <div>
+            <input type="radio" name="pledge" id="no-reward" value="no-reward" />
+            <label for="no-reward">Pledge with no reward</label>
+            <p>
+              Choose to support us without a reward if you simply believe in our project. As a backer, you will be signed up to receive product
+              updates via email.
+            </p>
+          </div>
+          <div>
+            <div>
+              <input type="radio" name="pledge" id="bamboo" value="bamboo" />
+              <label for="no-reward">Bamboo Stand</label>
+              <p>Pledge $25 or more</p>
+              <p>
+                You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and you’ll be added to a special
+                Backer member list.
+              </p>
+              <p><span>101</span> left</p>
+            </div>
+            <!-- Selected pledge start -->
+            <div>
+              <form action="">
+                <label for="">Enter your pledge</label>
+                <span>$<input type="number" min="25" value="25" /></span>
+                <input type="submit" value="Continue" />
+              </form>
+            </div>
+            <!-- Selected pledge end -->
+          </div>
+          <div>
+            <div>
+              <input type="radio" name="pledge" id="black" value="black" />
+              <label for="no-reward">Black Edition Stand</label>
+              <p>Pledge $75 or more</p>
+              <p>
+                You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer member list. Shipping is
+                included.
+              </p>
+              <p><span>64</span> left</p>
+            </div>
+            <!-- Selected pledge start -->
+            <div>
+              <form action="">
+                <label for="">Enter your pledge</label>
+                <span>$<input type="number" min="75" value="75" /></span>
+                <input type="submit" value="Continue" />
+              </form>
+            </div>
+            <!-- Selected pledge end -->
+          </div>
+          <div>
+            <div>
+              <input type="radio" name="pledge" id="mahogany" value="Mahogany" />
+              <label for="no-reward">Mahogany Special Edition</label>
+              <p>Pledge $200 or more</p>
+              <p>
+                You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added to our Backer member list.
+                Shipping is included.
+              </p>
+              <p><span>0</span> left</p>
+            </div>
+            <!-- Selected pledge start -->
+            <div>
+              <form action="">
+                <label for="">Enter your pledge</label>
+                <span>$<input type="number" min="200" value="200" /></span>
+                <input type="submit" value="Continue" />
+              </form>
+            </div>
+            <!-- Selected pledge end -->
+          </div>
+        </fieldset>
+      </div>
+      <!-- Selection modal end -->
+      <!-- Success modal start -->
+      <div>
+        <div>
+          <img src="images/icon-check.svg" alt="" />
+        </div>
+        <h2>Thanks for your support!</h2>
+        <p>
+          Your pledge brings us one step closer to sharing Mastercraft Bamboo Monitor Riser worldwide. You will get an email once our campaign is
+          completed.
+        </p>
+        <button>Got it!</button>
+      </div>
+      <!-- Success modal end -->
+    </main>
+    <footer class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by
+      <a href="https://github.com/RaynaFaye">Serena Lombardo</a>.
+    </footer>
+    <script src="js/main.js"></script>
+  </body>
 </html>
