Styled header for mobile view

--- a/index.html
+++ b/index.html
@@ -9,12 +9,16 @@
     <title>Frontend Mentor | Crowdfunding product page</title>
   </head>
   <body>
+    <div class="background-fade"></div>
     <header class="header">
       <div class="header__image-block">
         <img src="images/logo.svg" alt="Crowdfund" />
       </div>
       <nav class="header__nav">
-        <ul class="header__nav__menu">
+        <button class="header__nav__menu-button">
+          <img src="images/icon-hamburger.svg" alt="" />
+        </button>
+        <ul class="header__nav__menu hidden">
           <li class="header__nav__menu__item"><a href="" class="header__nav__menu__link">About</a></li>
           <li class="header__nav__menu__item"><a href="" class="header__nav__menu__link">Discover</a></li>
           <li class="header__nav__menu__item"><a href="" class="header__nav__menu__link">Get started</a></li>
