Added functionality to show and hide menu for mouse and keyboard

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <img src="images/logo.svg" alt="Crowdfund" />
       </div>
       <nav class="header__nav">
-        <button class="header__nav__menu-button">
+        <button class="header__nav__menu-button" aria-controls="header__nav__menu" aria-expanded="false">
           <img src="images/icon-hamburger.svg" alt="" />
         </button>
-        <ul class="header__nav__menu hidden">
+        <ul id="header__nav__menu" class="header__nav__menu hidden">
           <li class="header__nav__menu__item"><a href="" class="header__nav__menu__link">About</a></li>
           <li class="header__nav__menu__item"><a href="" class="header__nav__menu__link">Discover</a></li>
           <li class="header__nav__menu__item"><a href="" class="header__nav__menu__link">Get started</a></li>
