--- a/index.html
+++ b/index.html
@@ -26,15 +26,25 @@
       </nav>
     </header>
     <main class="main">
-      <div>
-        <div>
+      <div class="intro">
+        <div class="intro__image-block">
           <img src="images/logo-mastercraft.svg" alt="" />
         </div>
-        <h1>Mastercraft Bamboo Monitor Riser</h1>
-        <p>A beautiful & handcrafted monitor stand to reduce neck and eye strain.</p>
-        <div>
-          <button>Back this project</button>
-          <button><img src="images/icon-bookmark.svg" alt="" />Bookmark</button>
+        <div class="main-background intro__text-block">
+          <h1 class="intro__text-block__title">Mastercraft Bamboo Monitor Riser</h1>
+          <p class="intro__text-block__text">A beautiful & handcrafted monitor stand to reduce neck and eye strain.</p>
+          <div class="intro__text-block__buttons">
+            <button class="intro__text-block__buttons__button-one button">Back this project</button>
+            <button class="intro__text-block__buttons__button-two button">
+              <svg width="56" height="56" xmlns="http://www.w3.org/2000/svg">
+                <g fill="none" fill-rule="evenodd">
+                  <circle fill="#2F2F2F" cx="28" cy="28" r="28" />
+                  <path fill="#B1B1B1" d="M23 19v18l5-5.058L33 37V19z" />
+                </g>
+              </svg>
+              Bookmark
+            </button>
+          </div>
         </div>
       </div>
       <div>
