Styled numbers section for desktop and added functionality to update progress bar depending on amount

--- a/index.html
+++ b/index.html
@@ -47,10 +47,13 @@
           </div>
         </div>
       </div>
-      <div>
-        <p><span>$89,914</span> of $100,000 backed</p>
-        <p><span>5,007</span> total backers</p>
-        <p><span>56</span> days left</p>
+      <div class="main-background numbers">
+        <p class="numbers__block"><span class="number-bold">$89,914</span> of $100,000 backed</p>
+        <p class="numbers__block"><span class="number-bold">5,007</span> total backers</p>
+        <p class="numbers__block"><span class="number-bold">56</span> days left</p>
+        <div class="progress-bar">
+          <div class="progress-bar__filler"></div>
+        </div>
       </div>
       <div>
         <h2>About this project</h2>
