Styled About section for desktop

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <img src="images/logo-mastercraft.svg" alt="" />
         </div>
         <div class="main-background intro__text-block">
-          <h1 class="intro__text-block__title">Mastercraft Bamboo Monitor Riser</h1>
+          <h1 class="title intro__text-block__title">Mastercraft Bamboo Monitor Riser</h1>
           <p class="intro__text-block__text">A beautiful & handcrafted monitor stand to reduce neck and eye strain.</p>
           <div class="intro__text-block__buttons">
             <button class="intro__text-block__buttons__button-one button">Back this project</button>
@@ -55,9 +55,9 @@
           <div class="progress-bar__filler"></div>
         </div>
       </div>
-      <div>
-        <h2>About this project</h2>
-        <p>
+      <div class="main-background about">
+        <h2 class="title about__main-title">About this project</h2>
+        <p class="about__text">
           The Mastercraft Bamboo Monitor Riser is a sturdy and stylish platform that elevates your screen to a more comfortable viewing height.
           Placing your monitor at eye level has the potential to improve your posture and make you more comfortable while at work, helping you stay
           focused on the task at hand.
@@ -66,34 +66,34 @@
           Featuring artisan craftsmanship, the simplicity of design creates extra desk space below your computer to allow notepads, pens, and USB
           sticks to be stored under the stand.
         </p>
-        <div>
-          <h3>Bamboo Stand</h3>
-          <p>Pledge $25 or more</p>
-          <p>
+        <div class="about__pledge-option">
+          <h3 class="title about__pledge-option__title">Bamboo Stand</h3>
+          <p class="about__pledge-option__value">Pledge $25 or more</p>
+          <p class="about__pledge-option__text">
             You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and you’ll be added to a special
             Backer member list.
           </p>
-          <p><span>101</span> left</p>
-          <button>Select Reward</button>
+          <p class="about__pledge-option__left"><span class="number-bold">101</span> left</p>
+          <button class="button about__pledge-option__button">Select Reward</button>
         </div>
-        <div>
-          <h3>Black Edition Stand</h3>
-          <p>Pledge $75 or more</p>
-          <p>
+        <div class="about__pledge-option">
+          <h3 class="title about__pledge-option__title">Black Edition Stand</h3>
+          <p class="about__pledge-option__value">Pledge $75 or more</p>
+          <p class="about__pledge-option__text">
             You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer member list. Shipping is included.
           </p>
-          <p><span>64</span> left</p>
-          <button>Select Reward</button>
+          <p class="about__pledge-option__left"><span class="number-bold">64</span> left</p>
+          <button class="button about__pledge-option__button">Select Reward</button>
         </div>
-        <div>
-          <h3>Mahogany Special Edition</h3>
-          <p>Pledge $200 or more</p>
-          <p>
+        <div class="about__pledge-option">
+          <h3 class="title about__pledge-option__title">Mahogany Special Edition</h3>
+          <p class="about__pledge-option__value">Pledge $200 or more</p>
+          <p class="about__pledge-option__text">
             You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added to our Backer member list.
             Shipping is included.
           </p>
-          <p><span>0</span> left</p>
-          <button>Out of Stock</button>
+          <p class="about__pledge-option__left"><span class="number-bold">0</span> left</p>
+          <button class="button about__pledge-option__button">Out of Stock</button>
         </div>
       </div>
       <!-- Selection modal start -->
