Added style for when no pledge option left and made content updatable

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         </div>
       </div>
       <div class="main-background numbers">
-        <p class="numbers__block"><span class="number-bold">$89,914</span> of $100,000 backed</p>
-        <p class="numbers__block"><span class="number-bold">5,007</span> total backers</p>
+        <p class="numbers__block"><span class="number-bold amount-raised"></span> of $100,000 backed</p>
+        <p class="numbers__block"><span class="number-bold total-backers"></span> total backers</p>
         <p class="numbers__block"><span class="number-bold">56</span> days left</p>
         <div class="progress-bar">
           <div class="progress-bar__filler"></div>
@@ -73,7 +73,7 @@
             You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and you’ll be added to a special
             Backer member list.
           </p>
-          <p class="about__pledge-option__left"><span class="number-bold">101</span> left</p>
+          <p class="about__pledge-option__left"><span class="number-bold bamboo-pledge-left"></span> left</p>
           <button class="button about__pledge-option__button">Select Reward</button>
         </div>
         <div class="about__pledge-option">
@@ -82,7 +82,7 @@
           <p class="about__pledge-option__text">
             You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer member list. Shipping is included.
           </p>
-          <p class="about__pledge-option__left"><span class="number-bold">64</span> left</p>
+          <p class="about__pledge-option__left"><span class="number-bold black-pledge-left"></span> left</p>
           <button class="button about__pledge-option__button">Select Reward</button>
         </div>
         <div class="about__pledge-option">
@@ -92,12 +92,12 @@
             You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added to our Backer member list.
             Shipping is included.
           </p>
-          <p class="about__pledge-option__left"><span class="number-bold">0</span> left</p>
+          <p class="about__pledge-option__left"><span class="number-bold mahogany-pledge-left"></span> left</p>
           <button class="button about__pledge-option__button">Out of Stock</button>
         </div>
       </div>
       <!-- Selection modal start -->
-      <div>
+      <div class="back-project-modal">
         <h2>Back this project</h2>
         <p>Want to support us in bringing Mastercraft Bamboo Monitor Riser out in the world?</p>
         <form action="">
@@ -172,7 +172,7 @@
       </div>
       <!-- Selection modal end -->
       <!-- Success modal start -->
-      <div>
+      <div class="thanks-modal">
         <div>
           <img src="images/icon-check.svg" alt="" />
         </div>
