--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </div>
       <nav class="header__nav">
         <button class="header__nav__menu-button" aria-controls="header__nav__menu" aria-expanded="false">
-          <img src="images/icon-hamburger.svg" alt="" />
+          <img src="images/icon-hamburger.svg" alt="Menu" />
         </button>
         <ul id="header__nav__menu" class="header__nav__menu hidden">
           <li class="header__nav__menu__item"><a href="" class="header__nav__menu__link">About</a></li>
@@ -102,6 +102,7 @@
         <button class="back-project-modal__close-icon">
           <svg width="14" height="15" xmlns="http://www.w3.org/2000/svg">
             <g fill="#7A7A7A" fill-rule="evenodd">
+              <title>Close</title>
               <path d="M2.404.782l11.314 11.314-2.122 2.122L.282 2.904z" />
               <path d="M.282 12.096L11.596.782l2.122 2.122L2.404 14.218z" />
             </g>
@@ -121,6 +122,15 @@
                   updates via email.
                 </p>
               </div>
+              <!-- Selected pledge start -->
+              <div class="back-project-modal__form__option__inner-two">
+                <label for="" class="back-project-modal__form__option__pledge-label">Enter your pledge</label>
+                <span class="back-project-modal__form__option__pledge-input-block"
+                  >$<input type="number" min="1" value="1" class="back-project-modal__form__option__pledge-input-block__input"
+                /></span>
+                <input type="submit" value="Continue" class="button back-project-modal__form__option__button" />
+              </div>
+              <!-- Selected pledge end -->
             </div>
             <div class="back-project-modal__form__option">
               <div class="back-project-modal__form__option__inner">
