Made content updatable for modal and added disabled style when no pledge numbers left

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             Shipping is included.
           </p>
           <p class="about__pledge-option__left"><span class="number-bold mahogany-pledge-left"></span> left</p>
-          <button class="button about__pledge-option__button">Out of Stock</button>
+          <button class="button about__pledge-option__button">Select Reward</button>
         </div>
       </div>
       <!-- Selection modal start -->
@@ -145,7 +145,7 @@
                   You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and you’ll be added to a
                   special Backer member list.
                 </p>
-                <p class="back-project-modal__form__option__left"><span class="number-bold bamboo-pledge-left">101</span> left</p>
+                <p class="back-project-modal__form__option__left"><span class="number-bold bamboo-pledge-left"></span> left</p>
               </div>
               <!-- Selected pledge start -->
               <div class="back-project-modal__form__option__inner-two">
@@ -169,7 +169,7 @@
                   You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer member list. Shipping is
                   included.
                 </p>
-                <p class="back-project-modal__form__option__left"><span class="number-bold black-pledge-left">64</span> left</p>
+                <p class="back-project-modal__form__option__left"><span class="number-bold black-pledge-left"></span> left</p>
               </div>
               <!-- Selected pledge start -->
               <div class="back-project-modal__form__option__inner-two">
@@ -193,7 +193,7 @@
                   You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added to our Backer member list.
                   Shipping is included.
                 </p>
-                <p class="back-project-modal__form__option__left"><span class="number-bold mahogany-pledge-left">0</span> left</p>
+                <p class="back-project-modal__form__option__left"><span class="number-bold mahogany-pledge-left"></span> left</p>
               </div>
               <!-- Selected pledge start -->
               <div class="back-project-modal__form__option__inner-two">
