Styled the Thanks Modal and added functionality to see it when pledge entered  and close it

--- a/index.html
+++ b/index.html
@@ -210,16 +210,16 @@
       </div>
       <!-- Selection modal end -->
       <!-- Success modal start -->
-      <div class="thanks-modal">
+      <div class="main-background thanks-modal">
         <div>
-          <img src="images/icon-check.svg" alt="" />
+          <img src="images/icon-check.svg" alt="" class="thanks-modal__image" />
         </div>
-        <h2>Thanks for your support!</h2>
-        <p>
+        <h2 class="title thanks-modal__title">Thanks for your support!</h2>
+        <p class="thanks-modal__text">
           Your pledge brings us one step closer to sharing Mastercraft Bamboo Monitor Riser worldwide. You will get an email once our campaign is
           completed.
         </p>
-        <button>Got it!</button>
+        <button class="button thanks-modal__button">Got it!</button>
       </div>
       <!-- Success modal end -->
     </main>
