Added functionality to pre check the pledge the user selected and have it focused in modal

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             Backer member list.
           </p>
           <p class="about__pledge-option__left"><span class="number-bold bamboo-pledge-left"></span> left</p>
-          <button class="button about__pledge-option__button">Select Reward</button>
+          <button class="button about__pledge-option__button" data-pledge="bamboo">Select Reward</button>
         </div>
         <div class="about__pledge-option">
           <h3 class="title about__pledge-option__title">Black Edition Stand</h3>
@@ -83,7 +83,7 @@
             You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer member list. Shipping is included.
           </p>
           <p class="about__pledge-option__left"><span class="number-bold black-pledge-left"></span> left</p>
-          <button class="button about__pledge-option__button">Select Reward</button>
+          <button class="button about__pledge-option__button" data-pledge="black">Select Reward</button>
         </div>
         <div class="about__pledge-option">
           <h3 class="title about__pledge-option__title">Mahogany Special Edition</h3>
@@ -93,7 +93,7 @@
             Shipping is included.
           </p>
           <p class="about__pledge-option__left"><span class="number-bold mahogany-pledge-left"></span> left</p>
-          <button class="button about__pledge-option__button">Select Reward</button>
+          <button class="button about__pledge-option__button" data-pledge="mahogany">Select Reward</button>
         </div>
       </div>
       <!-- Selection modal start -->
