Styled main page for mobile view

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                   <path fill="#B1B1B1" d="M23 19v18l5-5.058L33 37V19z" />
                 </g>
               </svg>
-              Bookmark
+              <span class="intro__text-block__buttons__button-two__bookmark-text">Bookmark</span>
             </button>
           </div>
         </div>
@@ -62,7 +62,7 @@
           Placing your monitor at eye level has the potential to improve your posture and make you more comfortable while at work, helping you stay
           focused on the task at hand.
         </p>
-        <p>
+        <p class="about__text">
           Featuring artisan craftsmanship, the simplicity of design creates extra desk space below your computer to allow notepads, pens, and USB
           sticks to be stored under the stand.
         </p>
