Styled modals for mobile view

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           </svg>
         </button>
         <h2 class="title back-project-modal__title">Back this project</h2>
-        <p>Want to support us in bringing Mastercraft Bamboo Monitor Riser out in the world?</p>
+        <p class="back-project-modal__text">Want to support us in bringing Mastercraft Bamboo Monitor Riser out in the world?</p>
         <form action="" class="back-project-modal__form">
           <fieldset>
             <div class="back-project-modal__form__option">
